--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "pnpm": "^8.15.1",
+    "postgrest-js": "1.0.0-rc2",
+    "supabase": "^1.136.3",
     "tsup": "^8.0.1",
+    "type-fest": "^4.11.0",
     "typescript": "^5.3.3"
   },
   "name": "supa-q-base-ts",
@@ -15,5 +19,8 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "version": "0.0.2"
+  "version": "0.0.1",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.3"
+  }
 }
