--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
     "release": "pnpm run build && changeset publish",
-    "lint": "tsc",
-    "gen-docs": "cd src && tsc supagendocs.ts && node supagendocs.js supabasegentypestypescripts.ts"
+    "tsc": "tsc ./src/supaq/lib/*.ts --target es2022",
+    "supats": "tsc ./src/supaq/supats.ts --target es2022 --module es2022 && cd src/supaq && node supats.js"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -26,6 +26,7 @@
   "dependencies": {
     "@babel/parser": "^7.24.0",
     "@supabase/supabase-js": "^2.39.3",
+    "commander": "^12.0.0",
     "recast": "^0.23.5",
     "safe-json-stringify": "^1.2.0",
     "ts-morph": "^21.0.1",
