--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "supaq": "dist/supats.js"
   },
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "files": ["dist"],
   "types": "dist/index.d.ts",
   "version": "0.0.1",
   "dependencies": {
