--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
     "release": "pnpm run build && changeset publish",
-    "supats": "tsc && cd src && node supats.js",
-    "test-gen": "cd src/lib && tsc jsc.ts --target es2022 --module es2022 --moduleResolution node --skipLibCheck && node tests.js "
+    "supats": "tsc && cd src && node supats.js"
   },
   "bin": {
     "supaq": "dist/supats.js"
   },
   "main": "dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "types": "dist/index.d.ts",
   "version": "0.0.1",
   "dependencies": {
+    "@supabase/postgrest-js": "^1.15.2",
     "@supabase/supabase-js": "^2.39.3",
     "tsc": "^2.0.4",
     "typescript-json-schema": "^0.63.0"
