--- a/package.json
+++ b/package.json
@@ -26,11 +26,19 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
     "@supabase/postgrest-js": "^1.15.2",
     "@supabase/supabase-js": "^2.39.3",
     "tsc": "^2.0.4",
     "typescript-json-schema": "^0.63.0"
-  }
+  },
+  "keywords": [
+    "supabase",
+    "orm",
+    "postgres",
+    "typescript",
+    "query",
+    "ts"
+  ]
 }
