--- a/package.json
+++ b/package.json
@@ -1,4 +1,27 @@
 {
+  "name": "supabase-query-ts",
+  "description": "Supabase Query TypeScript, a.k.a. SupaQ, provides type safety to all queries made with supabase-js",
+  "version": "0.0.3",
+  "type": "module",
+  "license": "MIT",
+  "scripts": {
+    "build": "tsup index.ts --format cjs,esm --dts",
+    "release": "pnpm run build && changeset publish"
+  },
+  "bin": {
+    "supaq": "dist/supats.js"
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@supabase/postgrest-js": "^1.15.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "tsc": "^2.0.4",
+    "typescript-json-schema": "^0.63.0"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "pnpm": "^8.15.1",
@@ -9,30 +32,6 @@
     "type-fest": "^4.11.0",
     "typescript": "^5.3.3"
   },
-  "type": "module",
-  "name": "supabase-query-ts",
-  "license": "MIT",
-  "description": "Supabase Query TypeScript, a.k.a. SupaQ, provides type safety to all queries made with supabase-js",
-  "scripts": {
-    "build": "tsup index.ts --format cjs,esm --dts",
-    "release": "pnpm run build && changeset publish",
-    "supats": "tsc && cd src && node supats.js"
-  },
-  "bin": {
-    "supaq": "dist/supats.js"
-  },
-  "main": "dist/index.js",
-  "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts",
-  "version": "0.0.2",
-  "dependencies": {
-    "@supabase/postgrest-js": "^1.15.2",
-    "@supabase/supabase-js": "^2.39.3",
-    "tsc": "^2.0.4",
-    "typescript-json-schema": "^0.63.0"
-  },
   "keywords": [
     "supabase",
     "orm",
@@ -40,5 +39,9 @@
     "typescript",
     "query",
     "ts"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/etymorf/supabase-query-ts"
+  }
 }
